Fixed bugs and enhanced search filter with isInterest and isZakat.