@@ -16,20 +16,22 @@ import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static java.util.Objects.nonNull;
+
+
 @Service
 @Slf4j
 public class ZakatServiceImpl implements ZakatService {
 
     private static NumberFormat NUMBER_FORMATTER;
-
-    {
-        this.NUMBER_FORMATTER = NumberFormat.getInstance();
-        NUMBER_FORMATTER.setMaximumFractionDigits(2);
-    }
-
     private final TransactionRepository transactionRepository;
     private final CustomerRepository customerRepository;
     private final ZakatUtility zakatUtility;
+
+    {
+        NUMBER_FORMATTER = NumberFormat.getInstance();
+        NUMBER_FORMATTER.setMaximumFractionDigits(2);
+    }
 
     public ZakatServiceImpl(TransactionRepository transactionRepository, CustomerRepository customerRepository, ZakatUtility zakatUtility) {
         this.transactionRepository = transactionRepository;
@@ -43,14 +45,20 @@ public class ZakatServiceImpl implements ZakatService {
         try {
             List<Transaction> transactionDetails = zakatUtility.readTransactionsFromExcel(fileName);
             Customer customerDetail = zakatUtility.readCustomerFromExcel(fileName);
-            List<Transaction> duplicateTransactions = transactionRepository.findByTransactionDateAndRemarksIn(transactionDetails.stream().map(Transaction::getSerialNumber).collect(Collectors.toList()),
-                    transactionDetails.stream().map(Transaction::getTransactionDate).collect(Collectors.toList()),
-                    transactionDetails.stream().map(Transaction::getTransactionRemarks).collect(Collectors.toList()));
+            List<Transaction> duplicateTransactions = transactionRepository.findByTransactionDateAndRemarksIn(transactionDetails.stream()
+                    .map(Transaction::getSerialNumber).collect(Collectors.toList()), transactionDetails.stream()
+                    .map(Transaction::getTransactionDate)
+                    .collect(Collectors.toList()), transactionDetails.stream()
+                    .map(Transaction::getTransactionRemarks)
+                    .collect(Collectors.toList()));
             if (!duplicateTransactions.isEmpty()) {
-                transactionBuilder.errorCode("DUPLICATE_ENTRIES").errorMessage(duplicateTransactions.stream()
-                        .map(transaction -> "TransactionDate:" + transaction.getTransactionDate() + ",Remarks:" + transaction.getTransactionRemarks()).collect(Collectors.toList()));
+                transactionBuilder.errorCode("DUPLICATE_ENTRIES")
+                        .errorMessage(duplicateTransactions.stream()
+                                .map(transaction -> "TransactionDate:" + transaction.getTransactionDate()
+                                        + ",Remarks:" + transaction.getTransactionRemarks())
+                                .collect(Collectors.toList()));
             }
-            if(duplicateTransactions.size()!=transactionDetails.size()){
+            if (duplicateTransactions.size() != transactionDetails.size()) {
                 transactionBuilder.successMessage("File Uploaded Successfully");
             }
             Map<String, LocalDate> duplicateEntries = duplicateTransactions.stream().collect(Collectors.toMap(Transaction::getTransactionRemarks, Transaction::getTransactionDate));
@@ -65,6 +73,7 @@ public class ZakatServiceImpl implements ZakatService {
             updatedTransactionDetails.forEach(transactionDetail -> transactionDetail.setCustomerDetail(customerDetail));
             log.info("TransactionDetails:{}", updatedTransactionDetails);
             transactionRepository.saveAll(updatedTransactionDetails);
+            log.info("SAVED SUCCESSFULLY !!! for filename:{}",fileName);
         } catch (Exception e) {
             log.error("Exception Occurred: ", e);
             throw new RuntimeException(e);
@@ -76,13 +85,12 @@ public class ZakatServiceImpl implements ZakatService {
     public List<TransactionResponse> fetchAllTransactions(TransactionRequest transactionRequest) {
         try {
             List<Transaction> transactionDetails = transactionRepository.findAll();
-            return filterTransactionDetails(transactionDetails, transactionRequest)
-                    .stream()
-                    .filter(transaction -> transaction.getTransactionRemarks().toLowerCase().contains(transactionRequest.getRemarksData().toLowerCase()))
+            return filterTransactionDetails(transactionDetails, transactionRequest).stream()
                     .sorted(Comparator.comparingDouble(i -> i.getDepositAmount().doubleValue()))
-                    .map(this::mapTransactionResponse).collect(Collectors.toList());
+                    .map(this::mapTransactionResponse)
+                    .collect(Collectors.toList());
         } catch (Exception e) {
-            log.error("ERROR Occurred: ", e);
+            log.error("ERROR Occurred during fetchAllTransactions: ", e);
             throw new RuntimeException(e);
         }
     }
@@ -92,21 +100,26 @@ public class ZakatServiceImpl implements ZakatService {
         List<Transaction> transactionDetails = transactionRepository.findAll();
         TransactionResponse minimumBalanceTransaction = filterTransactionDetails(transactionDetails, transactionRequest)
                 .stream()
+                .filter(Objects::nonNull)
                 .map(this::mapTransactionResponse)
-                .filter(transaction -> !transaction.getTransactionRemarks().toLowerCase().contains(transactionRequest.getRemarksData().toLowerCase()))
-                .min(Comparator.comparing(TransactionResponse::getBalance)).orElseThrow();
-
-        Set<BigDecimal> minimumBalances = filterTransactionDetails(transactionDetails, transactionRequest).stream().map(Transaction::getBalance).distinct().sorted().limit(3).collect(Collectors.toSet());
+                .min(Comparator.comparing(TransactionResponse::getBalance))
+                .orElse(null);
+        if (Objects.isNull(minimumBalanceTransaction)) {
+            return null;
+        }
+        Set<BigDecimal> minimumBalances = filterTransactionDetails(transactionDetails, transactionRequest)
+                .stream()
+                .map(Transaction::getBalance)
+                .distinct().sorted().limit(3).collect(Collectors.toSet());
         Double averageBalance = minimumBalances.stream().mapToDouble(BigDecimal::doubleValue).average().orElse(minimumBalanceTransaction.getBalance().doubleValue());
         log.info("Average of minimum 3 balance:{}, those 3 balances are {}, minimumBalance:{}", averageBalance, minimumBalances, minimumBalanceTransaction.getBalance());
         BigDecimal zakatAmount = BigDecimal.valueOf(averageBalance).multiply(new BigDecimal("0.025"));
-        log.info("ZAKAT :{}, MINIMUM BALANCE:{}, DATE:{}, ID:{}", zakatAmount, minimumBalanceTransaction.getBalance(), minimumBalanceTransaction.getTransactionDate(),
-                minimumBalanceTransaction.getTransactionDetailId());
+        log.info("ZAKAT :{}, MINIMUM BALANCE:{}, DATE:{}, ID:{}", zakatAmount, minimumBalanceTransaction.getBalance(), minimumBalanceTransaction.getTransactionDate(), minimumBalanceTransaction.getTransactionDetailId());
 
-        return Amount.builder().amount(zakatAmount)
+        return Amount.builder()
+                .amount(zakatAmount)
                 .formattedAmount(NUMBER_FORMATTER.format(zakatAmount))
                 .year(minimumBalanceTransaction.getTransactionDate())
-                .isPaid(false)
                 .build();
     }
 
@@ -114,24 +127,38 @@ public class ZakatServiceImpl implements ZakatService {
     public Amount calculateInterest(TransactionRequest transactionRequest) {
         List<Transaction> transactionDetails = transactionRepository.findAll();
         BigDecimal interestAmount = filterTransactionDetails(transactionDetails, transactionRequest)
-                .stream()
-                .map(this::mapTransactionResponse)
-                .filter(transaction -> transaction.getTransactionRemarks().toLowerCase().contains(transactionRequest.getRemarksData().toLowerCase()))
+                .stream().map(this::mapTransactionResponse)
                 .map(TransactionResponse::getDepositAmount)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-        return Amount.builder().amount(interestAmount)
+
+        return Amount.builder()
+                .amount(interestAmount)
                 .formattedAmount(NUMBER_FORMATTER.format(interestAmount))
                 .year(transactionRequest.getToDate())
                 .build();
     }
 
     private List<Transaction> filterTransactionDetails(List<Transaction> transactionDetails, TransactionRequest transactionRequest) {
-        return transactionDetails.stream()
-                .filter(transaction -> Objects.nonNull(transactionRequest.getFromDate())
-                        && Objects.nonNull(transactionRequest.getToDate())
-                        && transaction.getTransactionDate().isAfter(transactionRequest.getFromDate())
-                        && transaction.getTransactionDate().isBefore(transactionRequest.getToDate()))
-                .toList();
+        if (nonNull(transactionRequest.getFromDate())) {
+            transactionDetails = transactionDetails.stream().filter(transaction -> transaction.getTransactionDate().isAfter(transactionRequest.getFromDate()) ||
+                    transaction.getTransactionDate().isEqual(transactionRequest.getFromDate())).collect(Collectors.toList());
+        }
+        if (nonNull(transactionRequest.getToDate())) {
+            transactionDetails = transactionDetails.stream().filter(transaction -> transaction.getTransactionDate().isBefore(transactionRequest.getToDate()) ||
+                    transaction.getTransactionDate().isEqual(transactionRequest.getToDate())).collect(Collectors.toList());
+        }
+        if (nonNull(transactionRequest.getRemarksData())) {
+            if (transactionRequest.isZakat()) {
+                transactionDetails = transactionDetails.stream().filter(transaction -> !transaction.getTransactionRemarks().toLowerCase()
+                                .contains(transactionRequest.getRemarksData().toLowerCase()))
+                        .collect(Collectors.toList());
+            } else if (transactionRequest.isInterest()) {
+                transactionDetails = transactionDetails.stream()
+                        .filter(transaction -> transaction.getTransactionRemarks().toLowerCase().contains(transactionRequest.getRemarksData().toLowerCase()))
+                        .collect(Collectors.toList());
+            }
+        }
+        return transactionDetails;
     }
 
     private TransactionResponse mapTransactionResponse(Transaction transaction) {
